adding lint and its script

--- a/tic-tac-toe/package.json
+++ b/tic-tac-toe/package.json
@@ -19,7 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prettier-format": "prettier --config ../.prettierrc src/*.js --write"
+    "format": "prettier --config ../.prettierrc src/*.js --write",
+    "lint": "eslint . --ext .js" 
   },
   "eslintConfig": {
     "extends": [
